--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
 	"symfony/framework-bundle": "2.*||3.*",
 	"twig/twig": "1.*",
 	"symfony/options-resolver": "2.*||3.*",
-	"wookieb/relative-date": "dev-master"
+	"wookieb/relative-date": "0.1"
   }
 }
