--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
 	"twig/twig": "1.*",
 	"symfony/options-resolver": "2.*||3.*",
 	"wookieb/relative-date": "0.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.4"
   }
 }
